--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -53,7 +53,7 @@ target_link_libraries(storage_test_utils mg-storage-v2)
 # Test integrations-kafka
 
 add_library(kafka-mock STATIC kafka_mock.cpp)
-target_link_libraries(kafka-mock mg-utils librdkafka++ librdkafka Threads::Threads zlib gtest)
+target_link_libraries(kafka-mock mg-utils librdkafka++ librdkafka Threads::Threads gtest)
 # Include directories are intentionally not set, because kafka-mock isn't meant to be used apart from unit tests
 
 add_unit_test(integrations_kafka_consumer.cpp kafka_mock.cpp)
