--- a/tests/e2e/streams/transformations/CMakeLists.txt
+++ b/tests/e2e/streams/transformations/CMakeLists.txt
@@ -1,1 +1,2 @@
-copy_streams_e2e_python_files(transform.py)
+copy_streams_e2e_python_files(kafka_transform.py)
+copy_streams_e2e_python_files(pulsar_transform.py)
