--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -5,4 +5,4 @@ set(io_src_files
     network/utils.cpp)
 
 add_library(mg-io STATIC ${io_src_files})
-target_link_libraries(mg-io stdc++fs Threads::Threads fmt mg-utils)
+target_link_libraries(mg-io stdc++fs Threads::Threads fmt::fmt mg-utils)
