--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -5,11 +5,9 @@ set(utils_src_files
     csv_parsing.cpp
     file.cpp
     file_locker.cpp
-    license.cpp
     memory.cpp
     memory_tracker.cpp
     readable_size.cpp
-    settings.cpp
     signals.cpp
     sysinfo/memory.cpp
     temporal.cpp
@@ -17,5 +15,20 @@ set(utils_src_files
     thread_pool.cpp
     uuid.cpp)
 
+find_package(Boost REQUIRED)
+
 add_library(mg-utils STATIC ${utils_src_files})
-target_link_libraries(mg-utils mg-kvstore mg-slk stdc++fs Threads::Threads spdlog fmt gflags uuid rt)
+target_link_libraries(mg-utils PUBLIC Boost::headers fmt::fmt spdlog::spdlog)
+target_link_libraries(mg-utils PRIVATE stdc++fs Threads::Threads gflags uuid rt)
+
+set(settings_src_files
+    settings.cpp)
+
+add_library(mg-settings STATIC ${settings_src_files})
+target_link_libraries(mg-settings mg-kvstore mg-slk mg-utils)
+
+set(license_src_files
+    license.cpp)
+add_library(mg-license STATIC ${license_src_files})
+target_link_libraries(mg-license mg-settings mg-utils)
+
