--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,10 +36,8 @@ set(mg_single_node_v2_sources
     glue/auth.cpp
 )
 
-find_package(Boost REQUIRED)
-
 set(mg_single_node_v2_libs stdc++fs Threads::Threads
-    telemetry_lib mg-query mg-communication mg-memory mg-utils mg-auth mg-license mg-settings Boost::headers)
+    telemetry_lib mg-query mg-communication mg-memory mg-utils mg-auth mg-license mg-settings)
 if (MG_ENTERPRISE)
   # These are enterprise subsystems
   set(mg_single_node_v2_libs ${mg_single_node_v2_libs} mg-audit)
