Bolt over websocket initial

--- a/src/communication/CMakeLists.txt
+++ b/src/communication/CMakeLists.txt
@@ -6,8 +6,10 @@ set(communication_src_files
     helpers.cpp
     init.cpp)
 
+find_package(Boost REQUIRED)
+
 add_library(mg-communication STATIC ${communication_src_files})
-target_link_libraries(mg-communication Threads::Threads mg-utils mg-io fmt::fmt gflags)
+target_link_libraries(mg-communication Boost::headers Threads::Threads mg-utils mg-io fmt::fmt gflags)
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(mg-communication ${OPENSSL_LIBRARIES})
