--- a/src/communication/CMakeLists.txt
+++ b/src/communication/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(communication_src_files
+    websocket/auth.cpp
     websocket/server.cpp
     websocket/listener.cpp
     websocket/session.cpp
@@ -12,7 +13,7 @@ set(communication_src_files
 find_package(Boost REQUIRED)
 
 add_library(mg-communication STATIC ${communication_src_files})
-target_link_libraries(mg-communication Boost::headers Threads::Threads mg-utils mg-io fmt::fmt gflags)
+target_link_libraries(mg-communication Boost::headers Threads::Threads mg-utils mg-io mg-auth fmt::fmt gflags)
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(mg-communication ${OPENSSL_LIBRARIES})
