--- a/src/auth/CMakeLists.txt
+++ b/src/auth/CMakeLists.txt
@@ -5,6 +5,9 @@ set(auth_src_files
     module.cpp)
 
 find_package(Seccomp REQUIRED)
+find_package(fmt REQUIRED)
+find_package(gflags REQUIRED)
+
 
 add_library(mg-auth STATIC ${auth_src_files})
 target_link_libraries(mg-auth json libbcrypt gflags fmt::fmt)
