--- a/src/requests/CMakeLists.txt
+++ b/src/requests/CMakeLists.txt
@@ -2,6 +2,9 @@ set(requests_src_files
     requests.cpp)
 
 find_package(CURL REQUIRED)
+find_package(fmt REQUIRED)
+find_package(gflags REQUIRED)
+
 
 add_library(mg-requests STATIC ${requests_src_files})
 target_link_libraries(mg-requests mg-utils spdlog::spdlog fmt::fmt gflags json ${CURL_LIBRARIES})
