--- a/src/rpc/CMakeLists.txt
+++ b/src/rpc/CMakeLists.txt
@@ -3,6 +3,9 @@ set(rpc_src_files
     protocol.cpp
     server.cpp)
 
+find_package(fmt REQUIRED)
+find_package(gflags REQUIRED)
+
 add_library(mg-rpc STATIC ${rpc_src_files})
 target_link_libraries(mg-rpc Threads::Threads mg-communication mg-utils mg-io fmt::fmt gflags)
 target_link_libraries(mg-rpc mg-slk)
