--- a/src/slk/CMakeLists.txt
+++ b/src/slk/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(slk_src_files
     streams.cpp)
 
+find_package(gflags REQUIRED)
+
 add_library(mg-slk STATIC ${slk_src_files})
 target_link_libraries(mg-slk gflags)
 target_link_libraries(mg-slk mg-utils)
