--- a/tests/e2e/replication/CMakeLists.txt
+++ b/tests/e2e/replication/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(gflags REQUIRED)
+
 add_executable(memgraph__e2e__replication__constraints constraints.cpp)
 target_link_libraries(memgraph__e2e__replication__constraints gflags mgclient mg-utils mg-io Threads::Threads)
 
