--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,7 +322,8 @@ if (UBSAN)
   # To make the program abort on undefined behavior, use UBSAN_OPTIONS=halt_on_error=1.
 endif()
 
-set(MG_PYTHON_VERSION "" CACHE STRING "Specify the exact python version used by the query modules")
+set(MG_PYTHON_VERSION "" CACHE STRING "Specify the exact Python version used by the query modules")
+set(MG_PYTHON_PATH "" CACHE STRING "Specify the exact Python path used by the query modules")
 
 # Add subprojects
 include_directories(src)
