--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -102,7 +102,7 @@ import_external_library(antlr4 STATIC
 
 # Setup google benchmark.
 import_external_library(benchmark STATIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/benchmark/lib/libbenchmark.a
+  ${CMAKE_CURRENT_SOURCE_DIR}/benchmark/${CMAKE_INSTALL_LIBDIR}/libbenchmark.a
   ${CMAKE_CURRENT_SOURCE_DIR}/benchmark/include
   # Skip testing. The tests don't compile with Clang 8.
   CMAKE_ARGS -DBENCHMARK_ENABLE_TESTING=OFF)
@@ -241,6 +241,7 @@ import_external_library(librdkafka STATIC
   CMAKE_ARGS -DRDKAFKA_BUILD_STATIC=ON
              -DRDKAFKA_BUILD_EXAMPLES=OFF
              -DRDKAFKA_BUILD_TESTS=OFF
+             -DWITH_ZSTD=OFF
              -DENABLE_LZ4_EXT=OFF
              -DCMAKE_INSTALL_LIBDIR=lib
              -DWITH_SSL=ON
