--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -13,6 +13,7 @@ set(utils_src_files
     temporal.cpp
     thread.cpp
     thread_pool.cpp
+    tsc.cpp
     uuid.cpp)
 
 find_package(Boost REQUIRED)
@@ -22,7 +23,7 @@ find_package(Threads REQUIRED)
 
 add_library(mg-utils STATIC ${utils_src_files})
 target_link_libraries(mg-utils PUBLIC Boost::headers fmt::fmt spdlog::spdlog)
-target_link_libraries(mg-utils PRIVATE stdc++fs Threads::Threads gflags uuid rt)
+target_link_libraries(mg-utils PRIVATE librdtsc stdc++fs Threads::Threads gflags uuid rt)
 
 set(settings_src_files
     settings.cpp)
