--- a/tests/e2e/websocket/workloads.yaml
+++ b/tests/e2e/websocket/workloads.yaml
@@ -1,12 +1,10 @@
-cert_file: &cert_file "tests/e2e/websocket/memgraph-selfsigned.crt"
-key_file: &key_file "tests/e2e/websocket/memgraph-selfsigned.key"
+cert_file: &cert_file "$PROJECT_PATH/tests/e2e/websocket/memgraph-selfsigned.crt"
+key_file: &key_file "$PROJECT_PATH/tests/e2e/websocket/memgraph-selfsigned.key"
 template_cluster: &template_cluster
   cluster:
     websocket:
       args: ["--bolt-port=7687", "--log-level=TRACE", "--"]
       log_file: "websocket-e2e.log"
-      setup_queries: []
-      validation_queries: []
 template_cluster_ssl: &template_cluster_ssl
   cluster:
     websocket:
@@ -20,9 +18,8 @@ template_cluster_ssl: &template_cluster_ssl
           *key_file,
           "--",
         ]
-      log_file: "websocket-e2e.log"
-      setup_queries: []
-      validation_queries: []
+      log_file: "websocket-ssl-e2e.log"
+      ssl: true
 
 workloads:
   - name: "Websocket"
