Add Websocket e2e tests (#353)

--- a/tests/e2e/CMakeLists.txt
+++ b/tests/e2e/CMakeLists.txt
@@ -14,5 +14,6 @@ add_subdirectory(streams)
 add_subdirectory(temporal_types)
 add_subdirectory(write_procedures)
 add_subdirectory(module_file_manager)
+add_subdirectory(websocket)
 
 copy_e2e_python_files(pytest_runner pytest_runner.sh "")
