--- a/.github/workflows/release_docker.yaml
+++ b/.github/workflows/release_docker.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKER_ORGANIZATION_NAME: memgraph
-      DOCKER_REPOSITORY_NAME: test-memgraph
+      DOCKER_REPOSITORY_NAME: memgraph
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -40,6 +40,7 @@ jobs:
           echo "Status:    ${{ steps.buildx.outputs.status }}"
           echo "Flags:     ${{ steps.buildx.outputs.flags }}"
           echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -52,7 +53,7 @@ jobs:
           curl -L ${{ github.event.inputs.memgraph_amd_binary_url }} > memgraph-amd64.deb
           curl -L ${{ github.event.inputs.memgraph_arm_binary_url }} > memgraph-arm64.deb
 
-      - name: Build & push amd64 image
+      - name: Build & push docker images
         run: |
           cd release/docker
           docker buildx build \
