--- a/.github/workflows/release_docker.yaml
+++ b/.github/workflows/release_docker.yaml
@@ -41,6 +41,7 @@ jobs:
           cd release/docker
           docker buildx build \
           --build-arg BINARY_NAME="memgraph-" \
+          --build-arg EXTENSION="deb" \
           --platform linux/amd64,linux/arm64 \
           --tag $DOCKER_ORGANIZATION_NAME/$DOCKER_REPOSITORY_NAME:${{ github.event.inputs.version }} \
           --tag $DOCKER_ORGANIZATION_NAME/$DOCKER_REPOSITORY_NAME:latest \
