--- a/tests/e2e/magic_functions/functions/CMakeLists.txt
+++ b/tests/e2e/magic_functions/functions/CMakeLists.txt
@@ -1,3 +1,5 @@
-copy_magic_functions_e2e_python_files(write.py)
-copy_magic_functions_e2e_python_files(read.py)
+copy_magic_functions_e2e_python_files(py_write.py)
+copy_magic_functions_e2e_python_files(py_read.py)
 
+add_query_module(c_read c_read.cpp)
+add_query_module(c_write c_write.cpp)
