--- a/tests/e2e/magic_functions/CMakeLists.txt
+++ b/tests/e2e/magic_functions/CMakeLists.txt
@@ -1,11 +1,8 @@
 # Set up C++ functions for e2e tests
-add_library(mg_procedure INTERFACE)
-target_include_directories(mg_procedure INTERFACE ${CMAKE_SOURCE_DIR}/include)
-
 function(add_query_module target_name src)
   add_library(${target_name} SHARED ${src})
   SET_TARGET_PROPERTIES(${target_name} PROPERTIES PREFIX "")
-  target_link_libraries(${target_name} PRIVATE mg_procedure)
+  target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 endfunction()
 
 # Set up Python functions for e2e tests
